--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,13 @@
+# Default configuration for GravelEssentialsX
+
+# TPA System Configuration
+tpa:
+
+  request-timeout-seconds: 60
+
+  cooldown-seconds: 60
+
+  warmup-seconds: 3
+
 # Debug-Mode (true/false)
 debug: false
